Continue refactoring of logic and fix a couple of tests