@@ -180,7 +180,7 @@ class ActionBusinessServiceTest {
         when(actionPersistenceService.getActionsByKeyResultIdOrderByPriorityAsc(oldKeyResult.getId()))
                 .thenReturn(Collections.emptyList());
 
-        List<Action> result = actionBusinessService.createDuplicates(oldKeyResult, newKeyResult);
+        List<Action> result = actionBusinessService.duplicateActions(oldKeyResult, newKeyResult);
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
@@ -210,12 +210,12 @@ class ActionBusinessServiceTest {
         when(actionPersistenceService.getActionsByKeyResultIdOrderByPriorityAsc(oldKeyResult.getId()))
                 .thenReturn(List.of(action1, action2));
 
-        List<Action> result = actionBusinessService.createDuplicates(oldKeyResult, newKeyResult);
+        List<Action> result = actionBusinessService.duplicateActions(oldKeyResult, newKeyResult);
 
         assertNotNull(result);
         assertEquals(2, result.size());
 
-        Action newAction1 = result.get(0);
+        Action newAction1 = result.getFirst();
         assertEquals("Neuer Drucker", newAction1.getActionPoint());
         assertFalse(newAction1.isChecked());
         assertEquals(1, newAction1.getPriority());
@@ -228,5 +228,6 @@ class ActionBusinessServiceTest {
         assertEquals(newKeyResult, newAction2.getKeyResult());
 
         verify(validator, times(2)).validate(any(Action.class));
+        verify(actionPersistenceService, times(2)).save(any(Action.class));
     }
 }
